added CSS and added access to JDK 22 preview features